[package]
authors = ["shawroger <roger@shawroger.com>"]
description = "A lib to permutate and combinate data from the list"
documentation = "https://docs.rs/combination/"
edition = "2021"
license = "MIT/Apache-2.0"
name = "combination"
repository = "https://github.com/shawroger/combination.git"
version = "0.3.0"
